--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "final-project",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://gadgetgirlcodes.github.io/FENDNeighborhoodProjectFinal/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.8",
     "@fortawesome/free-solid-svg-icons": "^5.5.0",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "@material-ui/core": "^3.4.0",
+    "gh-pages": "^2.0.1",
     "google-maps-react": "^2.0.2",
     "react": "^16.6.1",
     "react-debounce-input": "^3.2.0",
@@ -17,6 +19,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
